Got distracted and fixed the body so there is no whitespace or big ass footer

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,7 @@
+body {
+    grid-template-rows: auto 1fr auto;
+}
+
 header {
     position: revert;
     width: revert;
